adding to main page, will have to organize files afterward

--- a/views/questionaire.ejs
+++ b/views/questionaire.ejs
@@ -10,33 +10,34 @@
 <body>
     <div class="header-bar">
         <div class="logo">
-            Career Rater
+            <a href="/index">Career Rater</a>
         </div>
         <div class="search">
-            search-bar
+            <input type="text" id="search-bar" placeholder="Find company...">
         </div>
     </div>
     <section class="question-form">
         <form>
             <label for="q1">1. How confident do you feel about the stability of your job in the next 6-12 months?</label><br>
             <input type="text" id="confidence" name="confidence"><br>
-            <label for="q2">2.Have you heard any rumors or received any communication about potential layoffs or restructuring within the company?</label><br>
+            <label for="q2">2. Have you heard any rumors or received any communication about potential layoffs or restructuring within the company?</label><br>
             <input type="text" id="rumors" name="rumors"><br>
-            <label for="q3">3.How would you rate the level of transparency and communication from leadership regarding company performance and future plans?</label><br>
-            <input type="text"><br>
-            <label for="q4">4.Have you received any training or support to help you stay competitive in your role?</label><br>
-            <input type="text"><br>
-            <label for="q5">5.Do you feel that your job duties and responsibilities are secure, or have there been changes in your role that make you uncertain about your future with the company?</label><br>
-            <input type="text"><br>
-            <label for="q6">6.How would you describe the overall morale and job security of your colleagues?</label><br>
-            <input type="text"><br>
-            <label for="q7">7.Have you seen any recent changes in the company's financial performance that make you concerned?</label><br>
-            <input type="text"><br>
-            <label for="q8">8.Do you feel that your job provides meaningful work that aligns with your career goals and aspirations?</label><br>
-            <input type="text"><br>
-            <label for="q9">9.How would you rate your overall job satisfaction, taking into account your sense of job security?</label><br>
-            <input type="text"><br>
+            <label for="q3">3. How would you rate the level of transparency and communication from leadership regarding company performance and future plans?</label><br>
+            <input type="text" id="communication" name="communication"><br>
+            <label for="q4">4. Have you received any training or support to help you stay competitive in your role?</label><br>
+            <input type="text" id="training" name="training"><br>
+            <label for="q5">5. Do you feel that your job duties and responsibilities are secure, or have there been changes in your role that make you uncertain about your future with the company?</label><br>
+            <input type="text" id="duties" name="duties"><br>
+            <label for="q6">6. How would you describe the overall morale and job security of your colleagues?</label><br>
+            <input type="text" id="morale" name="morale"><br>
+            <label for="q7">7. Have you seen any recent changes in the company's financial performance that make you concerned?</label><br>
+            <input type="text" id="financial" name="financial"><br>
+            <label for="q8">8. Do you feel that your job provides meaningful work that aligns with your career goals and aspirations?</label><br>
+            <input type="text" id="meaningful" name="meaningful"><br>
+            <label for="q9">9. How would you rate your overall job satisfaction, taking into account your sense of job security?</label><br>
+            <input type="text" id="satisfaction" name="satisfaction"><br>
         </form>
+        <button class="form-submit" onClick="">Submit</button>
     </section>
     <section class="">
     </section>
