--- a/style.css
+++ b/style.css
@@ -55,20 +55,125 @@
     text-align: left;
 }
 
-.highlight-review {
-    height: 100%;
+.rating-box .stars
+{
+    align-items: center;
+    gap: 10px;
+}
+
+.stars i {
+    color: #d3d3d3;
+    cursor: pointer;
+}
+
+.stars i.active
+{
+    color: #000000;
+}
+
+.highlight-review div
+{
+    display: flex;
+    font-size: 28px;
+    background-color: rgb(116, 166, 202);
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+}
+
+.highlight-review form
+{
+    margin-top: 30px;
+}
+
+.highlight-make-account
+{
+    display: flex;
+    background-image: url(/images/handshake.jpeg);
+    background-size: cover;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+
+.highlight-make-account div
+{
+    display: flex;
+    font-size: 28px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+}
+
+input[type=text] {
+    padding: 0.75rem;
+    width: 40vw;
+    vertical-align: top;
+    box-sizing: border-box;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+input[type=submit] {
+    color: white;
+    background-color: rgb(14, 41, 60);
+    border: 1px solid black;
+    border-radius: 20px;
+    margin-top: 10px;
+    font-size: 20px;
+    padding: 8px;
+    width: 21vw;
+}
+
+input[type=submit]:hover {
+    background-color: rgb(32, 84, 121)
+}
+
+.form-submit {
+    color: white;
+    background-color: rgb(14, 41, 60);
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: 20px;
+    padding: 8px;
+    width: 21vw;
+}
+
+.form-submit:hover {
+    background-color: rgb(32, 84, 121)
+}
+
+.footer {
+    padding: 10vh;
+    text-align: center;
+    background-color: rgb(14, 41, 60);
+    color: white;
 }
 
 .question-form
 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: relative;
+    max-width: 60%;
+    margin: 2%;
 }
 
 .question-form input{
     width: 70%;
     height: 50px;
+}
+
+#search-bar
+{
+    width: 60vh;
+}
+
+input:last-child {
+    margin-bottom: 0;
 }
 
