--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,10 @@
             <a href="/index">Career Rater</a>
         </div>
         <div class="search">
-            <input type="text" id="search-bar" placeholder="Find company...">
+            <form action="" class="search-bar" >
+                <input type="text" placeholder="search a workplace" name="n">
+                <button type="submit"><img src="images/search-icon.png"></button>
+            </form>
         </div>
     </div>
     <div class="about">
