--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,7 @@
 .header-bar {
     display: flex;
     flex-direction: row;
+    align-items: center;
     background-color: rgb(14, 41, 60);
     color: white;
     padding: 18px 27px;
@@ -21,10 +22,46 @@
 .logo {
     margin-right: auto;
     font-weight: bold;
+    font-size: 28px;
 }
 
 .search {
-    margin-left: auto;
+    align-self: right;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-bar {
+    width: 275px;
+    flex: 1 1 200%;
+    padding: 8px 10px;
+    display: flex;
+    align-items: center;
+    background: rgb(21, 61, 90);
+    border-radius: 30px;
+}
+
+.search-bar input{
+    flex: 1;
+    border: none;
+    background: transparent;
+    outline: none;
+    font-size: 16px;
+    color: rgb(209, 198, 198);   
+    padding: 5px;
+}
+
+.search-bar button {
+    border: 0;
+    border-radius: 50%;
+    background: transparent;
+    cursor: pointer;
+}
+
+.search-bar button img {
+    width: 20px;
+    margin: 3px 6px;
 }
 
 .about {
@@ -111,20 +148,28 @@
     padding-bottom: 10vh;
 }
 
-input[type=text] {
+.highlight-review input[type=text] {
     padding: 0.75rem;
     width: 40vw;
     vertical-align: top;
     box-sizing: border-box;
-    border: 1px solid black;
     border-radius: 5px;
     margin-bottom: 5px;
+}
+
+.highlight-review input[type=submit] {
+    color: white;
+    background-color: rgb(14, 41, 60);
+    border-radius: 20px;
+    margin-top: 10px;
+    font-size: 20px;
+    padding: 8px;
+    width: 21vw;
 }
 
 input[type=submit] {
     color: white;
     background-color: rgb(14, 41, 60);
-    border: 1px solid black;
     border-radius: 20px;
     margin-top: 10px;
     font-size: 20px;
