--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,10 +39,7 @@
             <h2>
                 Get started by entering your company
             </h2>
-            <form method="post">
-                <input type="text" name="company" minlength="1" maxlength="100" placeholder="Your company" autofocus required><br>
-                <input type="text" name="company" minlength="1" maxlength="100" placeholder="Field of work" autofocus required><br>
-                <input type="text" name="company" minlength="1" maxlength="100" placeholder="Location" autofocus required><br>
+            <form action="/review">
                 <input type="submit" value="Speak your mind!">
             </form>
         </div>
