--- a/views/review.ejs
+++ b/views/review.ejs
@@ -25,6 +25,8 @@
             <form method="post">
                 <label for="name">Company name</label><br>
                 <input type="text" name="company" required="true"><br>
+                <label for="addr">Address</label><br>
+                <input type="text" name="address" required="true"><br>
                 <label for="q1">1. Rate your confidence on how you feel about the stability of your job in the next 6-12 months.</label><br>
                 <input type="number" name="confidence" min="1" max="10" required="true"><br>
                 <label for="q2">2. On a scale of 1 to 10 how transparency you rate the level of transparency and communication from leadership regarding company performance and future plans?</label><br>
